update my cv link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="../assets/hello1.jpg" alt="view my CV">
             <p class="first">I'm Mubaraq</p>
             <div class="text1">
-              <a href="#" target="_blank">View CV</a>
+              <a href="https://drive.google.com/file/d/1YltjZCtX0FVDJuW0U2NJdyq2T-9-tcbG/view?usp=sharing" target="_blank">View CV</a>
             </div>
           </div>
           
