added my updated resume to google cloud

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="../assets/hello1.jpg" alt="view my CV">
             <p class="first">I'm Mubaraq</p>
             <div class="text1">
-              <a href="https://drive.google.com/file/d/1YltjZCtX0FVDJuW0U2NJdyq2T-9-tcbG/view?usp=sharing" target="_blank">View CV</a>
+              <a href="https://drive.google.com/file/d/1ujy12m2FWAKvLdLAonWzsC1zHM-VLck1/view?usp=sharing" target="_blank">View CV</a>
             </div>
           </div>
           
@@ -81,7 +81,7 @@
           <h4>ABOUT ME</h4>
           <h2>WHO AM I?</h2>
           <div class="my-details">
-            <p>My name is <b>AKANBI MUBARAQ</b> and I am an experienced Python Backend Developer from Nigeria who gets overly excited when working with Back-End Development tools and Implementing Algorithms to solve coding challenges. After enrolling for my certification in Software Engineering, I soon found myself specializing in <b>Back-End Software Development</b>.</p>
+            <p>My name is <b>AKANBI MUBARAQ</b> and I am an experienced Software Engineer from Nigeria who gets overly excited when working with Back-End Development tools and Implementing Algorithms to solve coding challenges. I soon found myself specializing in <b>Back-End Software Development</b>.</p>
             <p> In my work experience, I have been relied upon as the one with detailed-oriented approach and innovative ideas. I am looking to broaden my horizons in software support and consultancy.</p>
             
           </div>
@@ -118,9 +118,9 @@
               </div>
               <div class="journey1">
                 <div class="material-symbols-outlined">
-                  <h5>Experience(Internship)<br><span class="year">Jan(2022)-April(2022)</span></h5>
+                  <h5>Experience(Software Engineer) <br><span class="year">Mar(2020)- Ongoing</span></h5>
                 </div>
-                <p>I worked as a Software Enginnering Intern at Ibadan Electricity Distributon Company that distributes electricty generated from GenCos and transmitted from TCN to end users.</p>
+                <p>I worked as a Software Enginneer at Onyx Plus Inc where I implemented a caching algorithm in scaling the payment gateway application for customers along with Haproxy load balancer which now decreased load times by 20%.</p>
               </div>
             </div>
             <div class="my-journey-details">
