added new skill

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <h4>ABOUT ME</h4>
           <h2>WHO AM I?</h2>
           <div class="my-details">
-            <p>My name is <b>AKANBI MUBARAQ</b> and I am an experienced Software Engineer from Nigeria who gets overly excited when working with Back-End Development tools and Implementing Algorithms to solve coding challenges. I soon found myself specializing in <b>Back-End Software Development</b>.</p>
+            <p>My name is <b>AKANBI MUBARAQ</b> and I am an experienced Software Engineer from Nigeria who gets overly excited when working with Back-End Development tools, Implementing Algorithms to solve coding challenges and Developing user interfaces. I soon found myself specializing in <b>FullStack Software Development</b>.</p>
             <p> In my work experience, I have been relied upon as the one with detailed-oriented approach and innovative ideas. I am looking to broaden my horizons in software support and consultancy.</p>
             
           </div>
@@ -95,7 +95,7 @@
         <div class="dev-container">
           <div class="dev1">
             <h3>WEB DEVELOPMENT</h3>
-            <p>I am a Back-End web developer with good grasp on Python, Flask, SQLAlchemy, SQL and NoSQL databases and I build websites using HTML, CSS, javascript, Python</p>
+            <p>I am a FullStack web developer with good grasp on Python, Django, Flask, SQLAlchemy, SQL and NoSQL databases and I build websites using HTML, CSS, Javascript, React, Python</p>
           </div>
           <div class="dev1" style="border-bottom: hsl(0, 100%, 75%) solid 5px; margin-top: 2rem;">
             <h3>SOFTWARE DEVELOPMENT</h3>
