added dev photo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <div class="name">
                 <p>Akanbi Mubaraq</p>
               </div>
-              <img src="../assets/profile.png" alt="akanbi mubaraq photo">
+              <img class="dev-image" src="../assets/IMG_2807.jpg" alt="akanbi mubaraq photo">
               <div class="email">
                 <p>akanbi.ges201@gmail.com</p>
               </div>
