fix: made project look responsive for mobile

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <div class="material-symbols-outlined">
                 <h5>Experience(Software Engineer) <br><span class="year">Mar(2022)- Ongoing</span></h5>
               </div>
-              <p>I work as a Software Enginneer at IBEDC where I designed and engineered an IBEDCPay mobile application catering to both postpaid and prepaid customers, resulting in a significant 35% improvement in customer satisfaction and revenue</p>
+              <p class="work1">I work as a Software Enginneer at IBEDC where I designed and engineered an IBEDCPay mobile application catering to both postpaid and prepaid customers, resulting in a significant 35% improvement in customer satisfaction and revenue</p>
             </div>
           </div>
           <div class="my-journey-details">
